# FilMachine_Reworked

./: .gitignore  ANALISI_PROGETTO.md  CMakeLists.txt  FilMachine_Piano_Validazione.docx  README.md  flash.sh  flash_p4.sh  partitions.csv  sdkconfig  sdkconfig.defaults.esp32p4  setup.sh  ui_debug_registry.inc  wiring_philosophy.md
boards/: board.h  board_jc4827w543.h  board_jc4880p433.h  board_makerfabs_s3.h  board_simulator.h
build272/: CMakeCache.txt  Makefile  cmake_install.cmake  filmachine_sim
build272/sd/: FilMachine_Backup.cfg
build320/: CMakeCache.txt  Makefile  cmake_install.cmake  filmachine_sim  filmachine_test
build320/sd/: FilMachine.cfg  FilMachine.json  FilMachine_Test.cfg
build800/: CMakeCache.txt  Makefile  cmake_install.cmake  filmachine_sim  filmachine_test
build800/sd/: FilMachine.cfg  FilMachine.json  FilMachine_Backup.cfg  FilMachine_Test.cfg
c_elements/: element_cleanPopup.c  element_drainPopup.c  element_filterPopup.c  element_messagePopup.c  element_otaWifiPopup.c  element_process.c  element_rollerPopup.c  element_selfcheckPopup.c  element_splashPopup.c  element_step.c  element_wifiPopup.c
c_fonts/: FilMachineFontIcons_100.c  FilMachineFontIcons_15.c  FilMachineFontIcons_20.c  FilMachineFontIcons_30.c  FilMachineFontIcons_40.c  FilMachineFontIcons_50.c  FilMachineFontIcons_60.c  font_air_americana_48.c  font_decaying_felt_pen_48.c  font_ds_digital_48.c  font_evanescent_48.c  font_nerdropol_lattice_48.c  font_retrolight_48.c  font_tropical_leaves_48.c  font_wishful_melisande_48.c  lv_font_montserrat_64.c
c_graphics/: splash.c
c_pages/: page_checkup.c  page_home.c  page_menu.c  page_processDetail.c  page_processes.c  page_settings.c  page_splash.c  page_stepDetail.c  page_tools.c
components/atanisoft__esp_lcd_ili9488/: .component_hash  CHECKSUMS.json  CMakeLists.txt  idf_component.yml
components/atanisoft__esp_lcd_ili9488/examples/lvgl_for_i8080/main/: idf_component.yml
components/driver/: CMakeLists.txt  driver_compat.c
components/eric-c-e__esp_lcd_nv3041/: .component_hash  CHECKSUMS.json  CMakeLists.txt  README.md  esp_lcd_nv3041.c  idf_component.yml
components/eric-c-e__esp_lcd_nv3041/include/: esp_lcd_nv3041.h
components/espressif__esp_lcd_touch/: CMakeLists.txt
components/ppa_engine/: CMakeLists.txt  ppa_engine.c
components/ppa_engine/include/: ppa_engine.h
components/st7701_lcd/: CMakeLists.txt  esp_lcd_st7701.c  esp_lcd_st7701_mipi.c  st7701_lcd.c
components/st7701_lcd/include/: esp_lcd_st7701.h  esp_lcd_st7701_interface.h  st7701_lcd.h
data/: FilMachine.cfg  FilMachine.json
drivers/: mcp23017.c  pca9685.c  sensors.c
drivers/include/: mcp23017.h  pca9685.h  sensors.h
lvgl_config/: lv_conf.h
main/: CMakeLists.txt  FilMachine.c  accessories.c  alarm.c  ds18b20.c  idf_component.yml  mcp23017.c  ota_update.c  pca9685.c  ui_profile.c  ui_profile_480x320.inc  ui_profile_800x480.inc  ws_server.c
main/include/: FilMachine.h  ds18b20.h  page_splash.h  pca9685.h  ui_profile.h  ws_server.h
resources/JC4880P443C_I_W/1-Demo/: Instructions.txt
resources/JC4880P443C_I_W/1-Demo/arduino_examples/Wifi_scan/: README.md  Wifi_scan.ino  lv_conf.h  pins_config.h
resources/JC4880P443C_I_W/1-Demo/arduino_examples/Wifi_scan/src/touch/: gt911_touch.cpp
resources/JC4880P443C_I_W/1-Demo/arduino_examples/adc_test/: README.md  adc_test.ino
resources/JC4880P443C_I_W/1-Demo/arduino_examples/lvgl_demo_v8/: README.md  lvgl_demo_v8.ino
resources/JC4880P443C_I_W/1-Demo/arduino_examples/lvgl_demo_v8/src/lcd/: esp_lcd_st7701.c  (+1 more)
resources/JC4880P443C_I_W/1-Demo/arduino_examples/lvgl_v9_sw_rotation/: README.md  lv_conf.h  lvgl_port_v9.c  lvgl_port_v9.h  lvgl_sw_rotation.c  lvgl_v9_sw_rotation.ino  pins_config.h
resources/JC4880P443C_I_W/1-Demo/arduino_examples/mp3_player/: README.md  mp3_player.ino
resources/JC4880P443C_I_W/1-Demo/idf_examples/: README.md
resources/JC4880P443C_I_W/1-Demo/idf_examples/ESP-IDF/esp_brookesia_phone/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults
resources/JC4880P443C_I_W/1-Demo/idf_examples/ESP-IDF/esp_draw_bit/: sdkconfig  sdkconfig.defaults
resources/JC4880P443C_I_W/1-Demo/idf_examples/ESP-IDF/lvgl_demo_v9/: sdkconfig
resources/JC4880P443C_I_W/1-Demo/idf_examples/ESP-IDF/lvgl_sw_rotation/: CMakeLists.txt  sdkconfig  sdkconfig.defaults
resources/JC4880P443C_I_W/1-Demo/idf_examples/ESP-IDF/uart_echo_rs485/: sdkconfig
resources/JC4880P443C_I_W/1-Demo/idf_examples/ESP-IDF/uart_send_rs485/: sdkconfig
resources/JC4880P443C_I_W/1-Demo/idf_examples/ESP-IDF/video_lcd_display/: CMakeLists.txt  sdkconfig  sdkconfig.defaults
resources/JC4880P443C_I_W/1-Demo/idf_examples/components/espressif__esp-brookesia/: .component_hash  idf_component.yml
resources/JC4880P443C_I_W/1-Demo/idf_examples/components/espressif__esp_cam_sensor/: .component_hash  CMakeLists.txt  Kconfig  idf_component.yml  project_include.cmake
resources/JC4880P443C_I_W/8-Burn operation/: 烧录说明：Burning instructions.txt
resources/JC4880P443C_I_W/8-Burn operation/flash_download_tool_3.9.9/flash_download_tool/: release_note.txt
resources/JC4880P443C_I_W/8-Burn operation/flash_download_tool_3.9.9/flash_download_tool/logs/: 30EDA0E19569.txt  30EDA0E19571.txt
scripts/: genFilMachineCFG.py
sd/: FilMachine.cfg  FilMachine.json
sim_build/: CMakeCache.txt  Makefile  cmake_install.cmake  filmachine_sim  filmachine_test  test_results_full.txt
sim_build/sd/: FilMachine.cfg  FilMachine_Test.cfg
src/: main.c
stub/: esp_stubs.c  esp_stubs.h  esp_vfs_fat.h  fatfs_stubs.c  fatfs_stubs.h  ff.h  freertos_stubs.c  freertos_stubs.h
stub/freertos/: task.h
stub/misc/: lv_color.h
tests/: test_destroy_and_lifecycle.c  test_edge_cases.c  test_execution.c  test_filter.c  test_helpers.c  test_live_sync.c  test_navigation.c  test_new_settings.c  test_ota.c  test_persistence.c  test_process_crud.c  test_processes.c  test_runner.c  test_runner.h  test_selfcheck.c  test_settings.c  test_step_crud.c  test_steps.c  test_tools.c  test_ui_profile.c  test_utilities.c  test_websocket.c
tools/: lvgl_splash_generator.jsx
(+91 files in other folders)
